--- a/server.cfg
+++ b/server.cfg
@@ -73,6 +73,7 @@ start esx_animations
 start esx_identity
 start esx_license
 start esx_dmvschool
+start esx_rpchat
 
 
 ###################### others
