Ajout de start esx_AdvancedFuel

--- a/server.cfg
+++ b/server.cfg
@@ -38,6 +38,7 @@ start esx_phone
 start esx_billing
 start esx_society
 start esx_datastore
+start esx_AdvancedFuel
 start esx_policejob
 start esx_joblisting
 start skinchanger
