Add maps section

--- a/server.cfg
+++ b/server.cfg
@@ -84,9 +84,13 @@ start esx_rpchat
 #start CoordsOverMap
 
 
-###################### car
+###################### cars
 
 
+
+
+
+###################### maps
 
 
 
@@ -97,7 +101,7 @@ sv_scriptHookAllowed 1
 # change this
 rcon_password MDP
 
-sv_hostname "Nom De Votre Serveur"
+sv_hostname "Server name"
 
 # nested configs!
 #exec server_internal.cfg
