--- a/server.cfg
+++ b/server.cfg
@@ -76,7 +76,7 @@ start esx_identity
 start esx_license
 start esx_dmvschool
 start esx_rpchat
-
+start esx_cruisecontrol
 
 ###################### others
 
