add start esx_AdvancedFuel and start esx_thief

--- a/server.cfg
+++ b/server.cfg
@@ -77,12 +77,13 @@ start esx_license
 start esx_dmvschool
 start esx_rpchat
 start esx_cruisecontrol
+start esx_thief
 
 ###################### others
 
 #start bob74_ipl
 #start CoordsOverMap
-
+start esx_AdvancedFuel
 
 ###################### cars
 
