--- a/server.cfg
+++ b/server.cfg
@@ -128,3 +128,5 @@ add_principal identifier.steam:110000112345678 group.admin # add the admin to th
 # hide player endpoints in external log output
 #sv_endpointprivacy true
 
+add_ace resource.essentialmode command.add_ace allow
+add_ace resource.essentialmode command.add_principal allow
