--- a/server.cfg
+++ b/server.cfg
@@ -100,7 +100,7 @@ start esx_AdvancedFuel
 sv_scriptHookAllowed 1
 
 # change this
-rcon_password MDP
+rcon_password YourPassword
 
 sv_hostname "Server name"
 
@@ -130,3 +130,9 @@ add_principal identifier.steam:110000112345678 group.admin # add the admin to th
 
 add_ace resource.essentialmode command.add_ace allow
 add_ace resource.essentialmode command.add_principal allow
+
+# server slots limit (must be between 1 and 31)
+sv_maxclients 30
+
+# license key for server (https://keymaster.fivem.net)
+sv_licenseKey changeme
